# Summarix

./: .env.api.key.example  .env.example  .gitignore  DESIGN_SPEC.md  Dockerfile  LLM 转移.md  Makefile  README.md  alembic.ini  compose.yaml  event.md  main.py  pyproject.toml  技术报告.md  数据使用说明.md  智能体团队示例.md  监控系统集成需求总结：PLG + LangWatch + 自动化部署.md  需求.md  需求.txt
.github/instructions/: 项目说明.instructions.md
.github/workflows/: ci.yml  extension-release.yml
alembic/: env.py  script.py.mako
alembic/versions/: 202605170001_initial_schema.py  202605180001_add_conversation_deleted_at.py
app/: __init__.py
app/api/: app.py  deps.py  schemas.py
app/auth/: cookies.py  passwords.py  service.py  tokens.py
app/chat/: __init__.py  agent_factory.py  artifacts.py  config.py  runner.py  stream_service.py
app/core/: config.py
app/db/: init.py  models.py  session.py
app/monitoring/: __init__.py  feedback.py  langwatch.py  logging.py  metrics.py  trace_context.py
config/: model-catalog.example.json
deploy/backend/: compose.yml
deploy/langwatch/: .env.LangWatch.example  .env.example  compose.yml  nginx.conf
deploy/plg/: .env.plg.example  compose.yml
deploy/shared/: compose.yml
extension/: package-lock.json  package.json  sidepanel.html  skills-lock.json  vite.config.ts  vitest.config.ts
scripts/: monitoring_stack.py
tests/: conftest.py  test_db_init.py  test_db_migrations.py  test_monitoring_stack.py  test_runtime_config.py
文档/: langWatch-DNS and TLS.md  langWatch-Grafana dashboard.md  langWatch-Prometheus alert rulesmd.md  langWatch-guardrails.md  数据库升级指南.md
(+37 files in other folders)
